--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
   ],
   "author": "mikiships",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mikiships/probe.git"
+  },
+  "homepage": "https://github.com/mikiships/probe#readme",
   "dependencies": {
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
